--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "type": "git",
     "url": "https://github.com/simonfan/comparator.git"
   },
-  "dependencies": {
-    "object-path": "^0.11.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-istanbul": "^1.1.1",
