--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "@habemus/comparator",
-  "main": "index.js",
-  "version": "2.0.0",
+  "name": "comparator",
+  "main": "./src",
+  "version": "0.1.0",
   "description": "Create comparator functions suitable for usage with Array.prototype.sort",
   "repository": {
     "type": "git",
     "url": "https://github.com/simonfan/comparator.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "amdefine": ">=0.1.0",
+    "lodash": "~2.4.1"
+  },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-istanbul": "^1.1.1",
-    "gulp-mocha": "^3.0.1",
+    "grunt": "~0.4.2",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-bower-requirejs": "~0.7.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-yuidoc": "~0.5.0",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "should": "~2.1.0",
     "mocha": "~1.15.0",
-    "should": "^2.1.1"
+    "grunt-simple-mocha": "~0.4.0",
+    "backbone": "~1.1.0"
   },
   "scripts": {
     "test": "mocha"
